# cannoli

./: .gitignore  .gitmodules  AI_DISCLOSURE.md  README.md  Taskfile.yml  credits.json  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/androidTest/java/dev/cannoli/launcher/: ExampleInstrumentedTest.kt
app/src/androidTest/java/dev/cannoli/scorza/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: platforms.json
app/src/main/assets/kitchen/: index.html
app/src/main/assets/kitchen/assets/: index-CJHuil4X.css  index-Dcd73je2.js
app/src/main/assets/shaders/crt-cannoli/: crt-cannoli.slangp
app/src/main/assets/shaders/crt-cannoli/shaders/: crt-composite.slang  kawase-blur-d0.slang  kawase-blur-d1.slang  kawase-blur-d2.slang  kawase-blur-d3.slang
app/src/main/cpp/: CMakeLists.txt  frame_buffer.h  libretro.h  libretro_bridge.cpp  libretro_compat.h  passthrough.frag  passthrough.vert  passthrough_frag.h  passthrough_vert.h  ra_integration.c  slang_transpiler.cpp  vulkan_jni.cpp  vulkan_renderer.cpp  vulkan_renderer.h
app/src/main/java/dev/cannoli/launcher/: MainActivity.kt
app/src/main/java/dev/cannoli/launcher/input/: InputHandler.kt
app/src/main/java/dev/cannoli/launcher/launcher/: ApkLauncher.kt  EmuLauncher.kt  LaunchResult.kt  RetroArchLauncher.kt
app/src/main/java/dev/cannoli/launcher/model/: Collection.kt  Game.kt  LaunchTarget.kt  Platform.kt
app/src/main/java/dev/cannoli/launcher/navigation/: AppNavGraph.kt
app/src/main/java/dev/cannoli/launcher/scanner/: FileScanner.kt  PlatformResolver.kt
app/src/main/java/dev/cannoli/launcher/settings/: SettingsRepository.kt
app/src/main/java/dev/cannoli/launcher/ui/components/: BackgroundImage.kt  BottomBar.kt  ContextMenu.kt  ErrorDialogs.kt  StatusBar.kt
app/src/main/java/dev/cannoli/launcher/ui/screens/: GameListScreen.kt  SettingsScreen.kt  SystemListScreen.kt
app/src/main/java/dev/cannoli/launcher/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/dev/cannoli/launcher/ui/viewmodel/: GameListViewModel.kt  SettingsViewModel.kt  SystemListViewModel.kt
app/src/main/java/dev/cannoli/launcher/util/: AtomicRename.kt  IniParser.kt  NaturalSort.kt
app/src/main/java/dev/cannoli/scorza/: MainActivity.kt
app/src/main/java/dev/cannoli/scorza/input/: CannoliAccessibilityService.kt  ControllerConfigStore.kt  ControllerManager.kt  InputHandler.kt  ProfileManager.kt
app/src/main/java/dev/cannoli/scorza/launcher/: ApkLauncher.kt  EmuLauncher.kt  InstalledCoreService.kt  LaunchManager.kt  LaunchResult.kt  RetroArchLauncher.kt
app/src/main/java/dev/cannoli/scorza/libretro/: ControlsScreen.kt  DebugHud.kt  GraphicsBackend.kt  GuideManager.kt  GuideScreen.kt  IGMScreen.kt  IGMSettingsScreen.kt  InGameMenu.kt  LibretroActivity.kt  LibretroAudio.kt  LibretroInput.kt  LibretroRenderer.kt  LibretroRunner.kt  LibretroScreen.kt  OverrideManager.kt  RetroAchievementsManager.kt  SaveSlot.kt  Shaders.kt  VulkanBackend.kt
app/src/main/java/dev/cannoli/scorza/model/: Collection.kt  Game.kt  LaunchTarget.kt  Platform.kt
app/src/main/java/dev/cannoli/scorza/navigation/: AppNavGraph.kt
app/src/main/java/dev/cannoli/scorza/scanner/: CoreInfoRepository.kt  FileScanner.kt  PlatformResolver.kt
app/src/main/java/dev/cannoli/scorza/server/: FileServer.kt  KitchenManager.kt
app/src/main/java/dev/cannoli/scorza/settings/: GlobalOverridesManager.kt  SettingsRepository.kt
app/src/main/java/dev/cannoli/scorza/util/: AtomicRename.kt  DebugLog.kt  IniParser.kt  IniWriter.kt  NaturalSort.kt
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/dev/cannoli/launcher/: ExampleUnitTest.kt
app/src/test/java/dev/cannoli/scorza/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+30 files in other folders)
